--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">chikaApp</string>
+    <string name="kakao_app_key">0528ffa400f348fc61a241b399e8d8d1</string>
 </resources>
