알림 화면 좋아요, 댓글알림 합침

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">chikaApp</string>
+    <string name="app_name">치카치카</string>
     <string name="kakao_app_key">0528ffa400f348fc61a241b399e8d8d1</string>
 </resources>
